# torchmil-rebuild

./: .gitignore  BUILD_PLAN.md  README.md  pyproject.toml
notebooks/: camelyon16_tutorial.ipynb
results/: camelyon16.md
scripts/: run_camelyon16_benchmark.py
tests/: test_camelyon16_benchmark.py  test_data.py  test_datasets.py  test_models.py  test_nn.py  test_utils.py
torchmil/: __init__.py
torchmil/data/: __init__.py  bag.py  collate.py
torchmil/datasets/: __init__.py  base.py  camelyon16.py
torchmil/models/: __init__.py  abmil.py  base.py  clam.py  dsmil.py  dtfdmil.py  transmil.py
torchmil/nn/: __init__.py  attention.py  classifier.py  graph.py  pooling.py  transformer.py
torchmil/utils/: __init__.py  cv.py  metrics.py  trainer.py
