[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchmil-rebuild"
version = "0.1.0"
description = "Rebuild of a PyTorch-based Multiple Instance Learning library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Liyang Lou" }
]
dependencies = [
  "torch>=2.0",
  "tensordict>=0.5",
  "numpy>=1.23",
  "scikit-learn>=1.3",
  "huggingface_hub>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["torchmil", "torchmil.data", "torchmil.datasets", "torchmil.nn", "torchmil.models", "torchmil.utils"]
